kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-responder-ingress
  annotations:
    haproxy.org/ssl-redirect: "true"
    haproxy.org/timeout-server: "180s"
    haproxy.org/timeout-client: "180s"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - first-responder.apps.k3s-dom.local
      secretName: ingress-tls
  rules:
    - host: first-responder.apps.k3s-dom.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: first-responder-service
                port:
                  number: 8080
